# FastDup

./: .gitignore  CMakeLists.txt  Makefile  Makefile_src  README.md  metrics.txt
ext/: README.md
ext/htslib/: Makefile  configure~
src/: CMakeLists.txt  main.cpp  version.h
src/markdup/: class_static_var.cpp  dup_metrics.h  markdup.cpp  md_args.cpp  md_args.h  md_funcs.cpp  md_funcs.h  md_pipeline.cpp  md_pipeline.h  md_types.h  new_pipe.cpp  new_pipe.h  pipeline_md.cpp  pipeline_md.h  read_ends.h  read_name_parser.h
src/util/: bam_buf.cpp  bam_buf.h  bam_wrap.h  murmur3.h  profiling.cpp  profiling.h  yarn.cpp  yarn.h
