cmake_minimum_required(VERSION 3.0)
project(FastDup)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
# set(CMAKE_BUILD_TYPE Debug)
# set(CMAKE_BUILD_TYPE Release)
# add_definitions(-DSHOW_PERF)
add_definitions(-DSHOW_PERF=1)
add_subdirectory(src)